// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dead_code_deletion.asm 1`] = `
{
  "0": {
    "op": "set_reg",
  },
  "1": {
    "next": 1,
    "op": "set_reg",
  },
  "parameters": [],
}
`;

exports[`empty.asm 1`] = `
{
  "name": "foo",
  "parameters": [],
}
`;

exports[`issue2.asm 1`] = `
{
  "0": {
    "0": -1,
    "1": -1,
    "next": 1,
    "op": "set_reg",
  },
  "name": "foo",
  "parameters": [],
}
`;

exports[`label.asm 1`] = `
{
  "0": {
    "0": {
      "id": "v_letter_A",
      "num": 1,
    },
    "1": "A",
    "op": "set_reg",
  },
  "1": {
    "0": "A",
    "op": "jump",
  },
  "2": {
    "0": {
      "id": "v_letter_A",
    },
    "op": "label",
  },
  "3": {
    "op": "notify",
    "txt": "0",
  },
  "4": {
    "op": "exit",
  },
  "5": {
    "0": {
      "id": "v_letter_A",
      "num": 1,
    },
    "op": "label",
  },
  "6": {
    "op": "notify",
    "txt": "1",
  },
  "7": {
    "next": false,
    "op": "exit",
  },
  "parameters": [],
}
`;

exports[`nested_sub.asm 1`] = `
{
  "0": {
    "next": false,
    "op": "call",
    "sub": 1,
  },
  "name": "foo",
  "parameters": [],
  "subs": [
    {
      "0": {
        "next": false,
        "op": "call",
        "sub": 2,
      },
      "name": "sub1",
      "parameters": [],
    },
    {
      "0": {
        "next": false,
        "op": "notify",
        "txt": "hello world",
      },
      "name": "sub2",
      "parameters": [],
    },
  ],
}
`;

exports[`nil_dest.asm 1`] = `
{
  "0": {
    "0": {
      "num": 1,
    },
    "next": false,
    "op": "set_reg",
  },
  "parameters": [],
}
`;

exports[`out_of_order.asm 1`] = `
{
  "0": {
    "0": {
      "id": "v_letter_A",
    },
    "next": false,
    "op": "jump",
  },
  "1": {
    "0": {
      "id": "v_letter_A",
    },
    "op": "label",
  },
  "2": {
    "op": "notify",
    "txt": "again",
  },
  "3": {
    "0": {
      "id": "v_letter_A",
    },
    "next": false,
    "op": "jump",
  },
  "parameters": [],
}
`;

exports[`param_rw.asm 1`] = `
{
  "0": {
    "0": 1,
    "op": "notify",
    "txt": "hi",
  },
  "1": {
    "0": 2,
    "op": "get_self",
  },
  "2": {
    "0": 3,
    "1": 4,
    "2": 5,
    "next": false,
    "op": "call",
    "sub": 1,
  },
  "name": "foo",
  "parameters": [
    false,
    true,
    true,
    false,
    false,
  ],
  "pnames": [
    "v",
    "v2",
    "v3",
    "v4",
    "v5",
  ],
  "subs": [
    {
      "0": {
        "0": 2,
        "1": 1,
        "op": "call",
        "sub": 2,
      },
      "1": {
        "0": 1,
        "1": 3,
        "next": false,
        "op": "call",
        "sub": 3,
      },
      "name": "sub1",
      "parameters": [
        true,
        false,
        false,
      ],
      "pnames": [
        "v3",
        "v4",
        "v5",
      ],
    },
    {
      "0": {
        "0": 2,
        "1": 1,
        "next": false,
        "op": "call",
        "sub": 4,
      },
      "name": "sub1_1",
      "parameters": [
        false,
        true,
      ],
      "pnames": [
        "v4",
        "v3",
      ],
    },
    {
      "0": {
        "0": 1,
        "1": 2,
        "next": false,
        "op": "call",
        "sub": 4,
      },
      "name": "sub1_2",
      "parameters": [
        true,
        false,
      ],
      "pnames": [
        "v3",
        "v5",
      ],
    },
    {
      "0": {
        "0": 1,
        "op": "get_self",
      },
      "1": {
        "0": 2,
        "next": false,
        "op": "notify",
      },
      "name": "sub2",
      "parameters": [
        true,
        false,
      ],
      "pnames": [
        "v3",
        "v4_5",
      ],
    },
  ],
}
`;

exports[`recurse_main.asm 1`] = `
{
  "0": {
    "next": false,
    "op": "call",
    "sub": 0,
  },
  "name": "foo",
  "parameters": [],
}
`;
